[metadata]
name = MicroAPI
version = attr: microapi.__version__

url = GitHub.com/FastAIAPI/MicroAPI
download_url = GitHub.com/FastAIAPI/MicroAPI/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =

license = MIT

description = FastAPI on low-power devices
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  FastAPI

  Internet of Things
  Internet-of-Things
  I.o.T.
  IoT

  low-power
  low power


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =


[options.packages.find]
where = src
exclude =
include =
  *
